--- a/css/style.scss
+++ b/css/style.scss
@@ -63,6 +63,11 @@ h1, h2, h3 {
 body {
     background: url('../images/backgorund.png') no-repeat;
     background-size: 100% 75rem;
+
+    @media (max-width: $tablet) {
+        background-size: 100% 65rem;
+        
+    }
 }
 
 .mb-1 {
@@ -122,19 +127,18 @@ body {
     border: 1px solid rgba(255,255,255,0.2);
 }
 
+
 .tm-width {
-    max-width: 1240px;
+    box-sizing: border-box;
+    max-width: 1440px;
     padding: 0 10rem;
     min-width: 320px;
     margin: 0 auto;
 
 
     @media (max-width: $tablet) {
-        max-width: 900px;
+        max-width: 768px;
         padding: 0 1.5rem;
-        display: flex;
-        flex-direction: column;
-        flex:1;
     }
 
     @media (max-width: $phone) {
@@ -412,7 +416,6 @@ body {
     }
 
     @media (max-width: $tablet) {
-        position: unset;
         min-height: 500px;
         padding: 3.2rem;
         border-radius: 2.4rem 2.4rem 0 0;
@@ -422,6 +425,10 @@ body {
                 display: none;
             }
             .tablet {
+                display: unset;
+                position: absolute;
+                bottom: 5rem;
+                max-width: 100%;
             }
         }
 
@@ -744,7 +751,7 @@ body {
         0px -4px 8px 0px rgba(68, 83, 113, 0.05),
         0px 0px 16px 0px rgba(68, 83, 113, 0.1);
         border-radius: 2rem;
-        padding: 2.4rem 2.4rem;
+        padding: 2.2rem 2.4rem;
     }
 
     .finance-img {
