--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 //sass --watch css/style.scss:css/style.css
 
 // variables
-$tablet: 991px;
+$tablet: 1200px;
 $phone: 767px;
 
 
@@ -39,7 +39,6 @@ html {
     padding: 0px;
 }
 
-
 h1, h2, h3 {
     font-weight: 500;
 }
@@ -50,8 +49,15 @@ h1, h2, h3 {
     background-color: rgba(19, 139, 225, 0.18);
     color: rgba(19, 139, 225, 1);
     padding: 0.8rem 1rem;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 500;
+    margin-bottom: 2.4rem;
+
+
+    @media (max-width: $tablet) {
+        font-size: 1.2rem;
+        margin-bottom: 1.6rem;
+    }
 }
 
 .text-high {
@@ -104,17 +110,16 @@ body {
 }
 
 .icon {
-    height: 24px;
-    width: 24px;
-    border: 1rem solid rgba(0, 153, 255, 0.18);
+    height: 2.4rem;
+    width: 2.4rem;
     border-radius: 1rem;
     margin-bottom: 2.4rem;
+    border: 1rem solid rgba(0, 153, 255, 0.18);
     
     img {
         background-color: rgba(0, 153, 255, 0.18);
         width: 100%;
         height: 100%;
-        object-fit: cover;
     }
 }
 
@@ -133,12 +138,12 @@ body {
     max-width: 1440px;
     padding: 0 10rem;
     min-width: 320px;
-    margin: 0 auto;
+    margin-inline: auto;
 
 
     @media (max-width: $tablet) {
         max-width: 768px;
-        padding: 0 1.5rem;
+        padding: 0 3.2rem;
     }
 
     @media (max-width: $phone) {
@@ -147,7 +152,9 @@ body {
     }
 }
 
-
+.tm-header {
+    min-height: 150px;
+}
 
 .tm-header-cont-1 {
     align-items: center;
@@ -161,9 +168,8 @@ body {
         margin-right: 2rem;
 
         img {
-            height: 100%;
             width: 100%;
-            object-fit: cover;
+            height: 100%;
         }
     }
 
@@ -460,181 +466,300 @@ body {
     display: flex;
     gap: 4rem;
 
-    @media (max-width: $tablet) {
-    }
-}
-
-.cluster-card {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid rgba(19, 139, 225, 0.2);
-    border-radius: 3.2rem;
-    padding: 3.2rem;
-    background: linear-gradient(to top, 
-                rgba(19, 139, 225, 0.2), 
-                rgba(19, 139, 225, 0.04));
-    background-size: cover;
-   
-    &-text {
+    .cluster-card {
         display: flex;
         flex-direction: column;
-        gap: 1.6rem;
-
-        .text-description {
+        border: 1px solid rgba(19, 139, 225, 0.2);
+        border-radius: 3.2rem;
+        padding: 3.2rem;
+        background: linear-gradient(to top, 
+                    rgba(19, 139, 225, 0.2), 
+                    rgba(19, 139, 225, 0.04));
+       
+        &-text {
             display: flex;
             flex-direction: column;
-            gap: 1.2rem;
-            h2 {
-                font-size: 3.2rem;
+            gap: 1.6rem;
+    
+            .text-description {
+                display: flex;
+                flex-direction: column;
+                gap: 1.2rem;
+                h2 {
+                    font-size: 3.2rem;
+                }
+                .text {
+                    font-size: 1.6rem;
+                }
             }
-            .text {
-                font-size: 1.6rem;
+        }
+    
+        &-illustration {
+            max-width: 300px;
+            max-height: 270px;
+            margin: 0 auto;
+            img {
+                width: 100%;
+                height: 100%;
             }
         }
     }
 
-    &-illustration {
-        max-width: 300px;
-        max-height: 270px;
-        margin: 0 auto;
-        img {
-            object-fit: cover;
-        }
-    }
-}
-
-.tm-about {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 4rem;
-    padding: 2.4rem 0 0 0;
-
-    &-frame {
+    .tm-about {
         display: flex;
-        flex-direction: column;
-        min-width: calc(50% - 8rem);
-        border-bottom: 1px solid rgba(28, 29, 47,0.12);
-        flex: 1;
-
-        .about-text {
-            display: flex;
+        flex-wrap: wrap;
+        gap: 4rem;
+        padding: 2.4rem 0 0 0;
+        
+        &-frame {
             flex-direction: column;
-            gap: 0.8rem;
-            margin-bottom: 3.2rem;
+            min-width: calc(50% - 8rem);
+            border-bottom: 
+                1px solid rgba(28, 29, 47,0.12);
             flex: 1;
-
-            &-high {
-                font-size: 2.4rem;
-                font-weight: 500;
+    
+            .about-text {
+                display: flex;
+                flex-direction: column;
+                gap: 0.8rem;
+                margin-bottom: 3.2rem;
+                flex: 1;
+    
+                &-high {
+                    font-size: 2.4rem;
+                    font-weight: 500;
+                }
+                &-low {
+                    font-size: 1.6rem;
+                    color: rgba(28, 29, 34, 0.36)
+                }
             }
-            &-low {
-                font-size: 1.6rem;
-                color: rgba(28, 29, 34, 0.36)
+        }
+    }
+
+
+    @media (max-width: $tablet) {
+        display: flex;
+        flex-direction: column;
+
+        .cluster-card {
+            flex-direction: row;
+            
+            &-text {
+                .text-description {
+                    max-width: 400px;
+                    h2 {
+                        font-size: 2.4rem;
+                    }
+                }
+            }
+
+            &-illustration {
+                min-width: 200px;
+                min-height: 150px;
+
+            }
+        }
+
+        .tm-about {
+            border: 1px solid rgba(28, 29, 34, 0.12);
+            padding: 3rem;
+            border-radius: 23px;
+
+            &-frame {
+                padding-right: 4rem;
+                border-bottom:unset;
+                min-width: calc((100% - 4rem * 8) / 3);
+                margin-bottom: 0;
+
+                .about-text {
+                    &-low {
+                        font-size: 1.4rem;
+                    }
+                }
+
+            }
+            
+            .liner {
+                order: 3;
+                width: 100%;
+                border: 1px solid rgba(28, 29, 34, 0.12);
+            }
+
+            &-frame:not(:nth-child(3)) {
+                border-right: 1px solid rgba(28, 29, 47,0.12);
+            
+            }
+
+            &-frame:nth-child(4) {
+                order: 4;
+            }
+
+            .cluster-thing {
+                order: 1;
+            }
+
+            .people {
+                order: 2;
+            }
+
+            .project-real {
+                order: 3;
+            }
+
+            .money-paid {
+                order: 6;
+                border-right: unset;
+            }
+
+            .tech-take {
+                order: 4;
+            }
+
+            .tech-req {
+                order: 5;
             }
         }
     }
 }
+
+
 
 // TODO: Тут проблема с адаптивом
 .cluster-cont-2 {
-    display: flex;
-    flex-direction: column;
-    gap: 4rem;
+    
+    h2 {
+        font-size: 4.8rem;
+        margin-bottom: 4rem;
+    }
+
+    .project-cards {
+        display: flex;
+        gap: 2rem;
+    }
+    
+    .card-cluster {
+        border-radius: 2rem;
+        padding: 1.2rem 0.8rem 2.4rem;
+        gap: 1rem;
+        flex-basis: 100%;
+        box-shadow:
+            0px -4px 8px 0px rgba(68, 83, 113, 0.05),
+            0px 0px 16px 0px rgba(68, 83, 113, 0.1);
+        
+        .illustration {
+            display: flex;
+            border-radius: 2rem;
+            background-color: rgb(248,248,248);
+            align-items: center;
+            justify-content: center;
+            min-height: 250px;
+    
+            img {
+                object-fit: cover;
+            }
+        }
+    }
+    
+    .cluster-info {
+        padding: 0 2rem;
+        gap: 2.4rem;
+        
+        .info-text {
+            font-size: 1.8rem;
+            font-weight: 500;
+            margin-bottom: 1.5rem;
+            line-height: 1.44;
+        }
+
+        .info-project-ppl {
+            display: flex;
+            justify-content: space-between;
+
+            .slash {
+                background-color:rgba(28,29,34, 12%);
+                width: 1px;
+            }
+    
+            .info-project {
+
+                &-high {
+                    font-size: 2.4rem;
+                    font-weight: 500;
+                    color: rgb(19, 139, 225);
+                }
+    
+    
+                &-low {
+                    font-size: 1.6rem;
+                    font-weight: 500;
+                }
+            }
+        }
+    }
+    
+    .cluster-btn {
+        margin: 0 auto;
+        border-radius: 1.2rem;
+        padding: 1.2rem 2.4rem;
+        background: 
+            linear-gradient(to right,
+             rgb(55, 203, 250),
+              rgb(34, 157, 245));
+    
+        &:hover {
+            cursor: pointer;
+        }  
+    }
+
 
     @media (max-width: $tablet) {
-        display: none;
-    }
-
-    .text-decoration {
-        display: flex;
-        flex-direction: column;
-        gap: 2.4rem;
-
         .global-tag-line {
-            font-size: 1.4rem;
+            font-size: 1.2rem;
         }
-
         h2 {
-            font-size: 4.8rem;
-        }
-    }
-}
-
-.project-cards {
-    display: flex;
-    gap: 2rem;
-}
-
-.card-cluster {
-    border-radius: 2rem;
-    padding: 1.2rem 0.8rem 2.4rem;
-    flex: 1;
-    box-shadow:
-        0px -4px 8px 0px rgba(68, 83, 113, 0.05),
-        0px 0px 16px 0px rgba(68, 83, 113, 0.1);
-    
-    .illustration {
-        display: flex;
-        border-radius: 2rem;
-        background-color: rgb(248,248,248);
-        min-height: 250px;
-        margin-bottom: 2rem;
-
-        img {
-            margin: 0 auto;
-        }
-    }
-}
-
-.cluster-info {
-    padding: 0 2rem;
-
-    .info-text {
-        font-size: 1.8rem;
-        font-weight: 500;
-        margin-bottom: 2.4rem;
-    }
-
-    .info-project-ppl {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-
-        .slash {
-            background-color:rgba(28,29,34, 12%);
-            width: 1px;
+            font-size: 3.2rem;
+            margin-bottom: 3.2rem;
         }
 
-        .info-project {
+        .project-cards {
+            gap: 1.6rem;
+            flex-wrap: wrap;
+        }
 
-            &-high {
-                font-size: 2.4rem;
-                font-weight: 500;
-                color: rgb(19, 139, 225);
+        .card-cluster {
+            flex-basis: calc((100% - 1.6rem) / 2);
+            box-sizing: border-box;
+            gap: 2rem;
+
+            .illustration {
+                min-height: 200px;
             }
 
-
-            &-low {
+            .info-text {
                 font-size: 1.6rem;
-                font-weight: 500;
+                margin-bottom: 1.6rem;
+                line-height: 1.5;
+            }
+
+            .info-project-ppl {
+                
+                .info-project {
+
+                    &-high {
+                        font-size: 1.8rem;
+                    }
+
+                    &-low {
+                        font-size: 1.6rem;
+                    }
+                }
             }
         }
+
     }
-}
+ }
 
-.cluster-btn {
-    margin: 0 auto;
-    border-radius: 1.2rem;
-    padding: 1.2rem 2.4rem;
-    background: 
-        linear-gradient(to right,
-         rgb(55, 203, 250),
-          rgb(34, 157, 245));
-
-    &:hover {
-        cursor: pointer;
-    }  
-}
 
 
 // TODO: тут проблема из-за которой не работает правильно адаптив
@@ -729,8 +854,9 @@ body {
         "feedback feedback req mscHub";
         gap: 2rem;
     &-text {
-        
+        max-width: 250px;
         &-high {
+            display: inline-flex;
             gap: 0.8rem;
             font-size: 1.8rem;
             font-weight: 500;
@@ -752,6 +878,7 @@ body {
         0px 0px 16px 0px rgba(68, 83, 113, 0.1);
         border-radius: 2rem;
         padding: 2.2rem 2.4rem;
+        position: relative;
     }
 
     .finance-img {
@@ -774,8 +901,8 @@ body {
 
     .tower {
         position: absolute;
-        top: -4rem;
-        right: -3rem;
+        top: -6rem;
+        right: -2rem;
         img {
             max-width: 100%;
         }
@@ -794,7 +921,6 @@ body {
 
     &-1 {
         grid-area: techcon;
-        position: relative;
     }
 
     &-2 {
@@ -807,7 +933,6 @@ body {
 
     &-4 {
         grid-area: feedback;
-        position: relative;
     }
 
     &-5 {
@@ -820,7 +945,6 @@ body {
 
     &-7 {
         grid-area: place;
-        position: relative;
     }
 
     &-8 {
@@ -829,7 +953,6 @@ body {
 
     &-9 {
         grid-area: mscHub;
-        position: relative;
     }
 }
 
